<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/join_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c0c0c0" >

    <LinearLayout
        android:id="@+id/name_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:paddingBottom="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="0dp" >

        <TextView
            android:layout_width="64dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/nickname"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/txt_player_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/username"
            android:maxLines="1" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/server_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_bar"
        android:layout_below="@+id/name_bar"
        android:background="@drawable/linepng"
        android:gravity="top"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:visibility="visible" >

        <ListView
            android:id="@+id/list_games"
            style="@style/styleName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#505050"
            android:listSelector="#00000000"
            android:padding="0dp"
            tools:listitem="@android:layout/simple_list_item_2" >

        </ListView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:padding="2pt" >

        <Button
            android:id="@+id/btn_discovery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discovery" />

        <Button
            android:id="@+id/btn_join_host"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/join_host" />

        <Button
            android:id="@+id/btn_new_host"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_host" />
    </LinearLayout>

</RelativeLayout>